--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="red">#FF0000</color>
     <color name="gray">#dfdfdf</color>
     <color name="dark_gray">#4e4e4e</color>
+    <color name="black_overlay">#80000000</color>
 </resources>
