--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,8 @@
         android:id="@+id/loader_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black_overlay">
+        android:background="@color/black_overlay"
+        android:visibility="gone">
 
         <ProgressBar
             android:layout_width="wrap_content"
