--- a/presentation/src/main/res/layout/home_fragment.xml
+++ b/presentation/src/main/res/layout/home_fragment.xml
@@ -14,4 +14,19 @@
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+    <TextView
+        android:id="@+id/empty_list_message_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="20dp"
+        android:fontFamily="@font/lato_bold"
+        android:gravity="center"
+        android:text="@string/empty_devices_list_message"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </FrameLayout>
