--- a/app/src/main/res/layout/delete_device_dialog.xml
+++ b/app/src/main/res/layout/delete_device_dialog.xml
@@ -35,12 +35,12 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/delete_btn"
-            style="@style/Widget.MaterialComponents.Button"
+            style="@style/FilledBlueButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="@color/blue"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="12dp"
             android:text="@string/delete"
-            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/cancel_btn"
@@ -49,9 +49,11 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/cancel_btn"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
+            style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingHorizontal="30dp"
+            android:paddingVertical="12dp"
             android:text="@string/cancel"
             android:textColor="@color/dark_gray"
             app:layout_constraintBottom_toBottomOf="parent"
