--- a/presentation/src/main/res/layout/home_device_item.xml
+++ b/presentation/src/main/res/layout/home_device_item.xml
@@ -24,7 +24,7 @@
         android:textColor="@color/dark_gray"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@id/device_sn_tv"
-        app:layout_constraintEnd_toStartOf="@+id/arrow_forward_iv"
+        app:layout_constraintEnd_toStartOf="@+id/edit_btn"
         app:layout_constraintStart_toEndOf="@id/device_image_iv"
         app:layout_constraintTop_toTopOf="@+id/device_image_iv"
         tools:text="House Number 1" />
@@ -39,10 +39,22 @@
         android:textColor="@color/dark_gray"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@+id/device_image_iv"
-        app:layout_constraintEnd_toStartOf="@+id/arrow_forward_iv"
+        app:layout_constraintEnd_toStartOf="@+id/edit_btn"
         app:layout_constraintStart_toEndOf="@id/device_image_iv"
         app:layout_constraintTop_toBottomOf="@+id/device_title_tv"
         tools:text="SN: 21342141242134214" />
+
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/edit_btn"
+        style="@style/Widget.Material3.Button.TextButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/edit"
+        android:textColor="@color/blue"
+        app:layout_constraintBottom_toBottomOf="@+id/arrow_forward_iv"
+        app:layout_constraintEnd_toStartOf="@+id/arrow_forward_iv"
+        app:layout_constraintTop_toTopOf="@+id/arrow_forward_iv" />
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/arrow_forward_iv"
